Fix chrome sidebar collapsed size

--- a/assets/scss/unifty/layout/_sidebar.scss
+++ b/assets/scss/unifty/layout/_sidebar.scss
@@ -318,6 +318,7 @@
 
         p {
           width: 0px;
+          height: 0px;
           overflow: auto;
         }
 
